<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <todo.javier.mera.todolist.ui.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_title_text"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/reminder_title_text_size"
        android:padding="15dp"
        android:layout_marginLeft="10dp"/>

    <RadioGroup
        android:id="@+id/reminderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <todo.javier.mera.todolist.ui.FontRadioButton
            android:id="@+id/fiveBeforeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_minutes_text"
            android:textSize="@dimen/radio_button_text_size"
            android:padding="10dp"/>

        <todo.javier.mera.todolist.ui.FontRadioButton
            android:id="@+id/tenBeforeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_minutes_text"
            android:textSize="@dimen/radio_button_text_size"
            android:padding="10dp"/>

        <todo.javier.mera.todolist.ui.FontRadioButton
            android:id="@+id/twentyBeforeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_minutes_text"
            android:textSize="@dimen/radio_button_text_size"
            android:padding="10dp"/>

        <todo.javier.mera.todolist.ui.FontRadioButton
            android:id="@+id/thirtyBeforeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty_minutes_text"
            android:textSize="@dimen/radio_button_text_size"
            android:padding="10dp"/>

        <todo.javier.mera.todolist.ui.FontRadioButton
            android:id="@+id/hourBeforeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_text"
            android:textSize="@dimen/radio_button_text_size"
            android:padding="10dp"/>
    </RadioGroup>
</LinearLayout>