<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_title_text"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/priority_title_text_size"
        android:padding="15dp"
        android:layout_marginLeft="10dp"/>

    <RadioGroup
        android:id="@+id/priorityRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <RadioButton
            android:id="@+id/noneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none_text"
            android:textSize="@dimen/radio_button_text_size"
            android:padding="10dp"/>

        <RadioButton
            android:id="@+id/lowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_text"
            android:textSize="@dimen/radio_button_text_size"
            android:padding="10dp"/>

        <RadioButton
            android:id="@+id/mediumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_text"
            android:textSize="@dimen/radio_button_text_size"
            android:padding="10dp"/>

        <RadioButton
            android:id="@+id/highButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_text"
            android:textSize="@dimen/radio_button_text_size"
            android:padding="10dp"/>
    </RadioGroup>
</LinearLayout>