<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sort Tasks by..."
        android:textSize="20sp"
        android:padding="10dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/sortRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left"
            android:layout_margin="10dp">

            <RadioButton
                android:id="@+id/sortByNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_none"
                android:textSize="20sp"
                android:padding="10dp"/>

            <RadioButton
                android:id="@+id/sortByDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_due_date"
                android:textSize="20sp"
                android:padding="10dp"/>

            <RadioButton
                android:id="@+id/sortByPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_priority"
                android:textSize="20sp"
                android:padding="10dp"/>

            <RadioButton
                android:id="@+id/sortByCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_completed"
                android:textSize="20sp"
                android:padding="10dp"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelDialogSort"
            style="@style/CancelButton"/>

        <Button
            android:id="@+id/okDialogSort"
            style="@style/OKButton"/>
    </LinearLayout>
</LinearLayout>